<resources>
    <string name="app_name">OnlineTaskLogin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create an Account</string>
    <string name="continue_with">Continue With</string>
    <string name="pass_length">Must be 8 char</string>
    <string name="pass_num">Must contain number (0-9)</string>
    <string name="pass_upper">One upper case letter  (A - Z)</string>
    <string name="pass_symbol">Must contain symbol</string>
    <string name="pass_error">Login Failed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mail_id">Eamil ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="valid_mobile">Please enter valid mobile</string>
</resources>