<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.onlinetasklogin.viewmodels.LogInSignUpViewModel" />
    </data>

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.SignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name"
                app:helperTextTextColor="@color/red_400"
                android:textColorHint="@color/brown_200"
                app:boxStrokeColor="@color/brown_400">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oswald_regular"
                    android:inputType="textPersonName"
                    android:paddingLeft="6dp"
                    android:text="@={viewmodel.suFName}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/last_name"
                app:helperTextTextColor="@color/red_400"
                android:textColorHint="@color/brown_200"
                app:boxStrokeColor="@color/brown_400">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oswald_regular"
                    android:inputType="textPersonName"
                    android:paddingLeft="6dp"
                    android:text="@={viewmodel.suLName}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/mail_id"
                app:helperTextTextColor="@color/red_400"
                android:textColorHint="@color/brown_200"
                app:boxStrokeColor="@color/brown_400">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oswald_regular"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="6dp"
                    android:text="@={viewmodel.suEmail}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_text_border"
                    android:gravity="center_vertical"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/user_name_layout"
                    app:layout_constraintTop_toBottomOf="@id/login_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_phn_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="3"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/brown_200"
                    app:boxStrokeColor="@color/brown_200"
                    app:helperTextTextColor="@color/red_400"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintLeft_toRightOf="@id/county_code"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oswald_regular"
                        android:inputType="phone"
                        android:paddingLeft="6dp"
                        android:text="@={viewmodel.suPhone}"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/brown_200"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:helperTextTextColor="@color/red_400"
                app:boxStrokeColor="@color/brown_400">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oswald_regular"
                    android:inputType="textPassword"
                    android:paddingLeft="6dp"
                    android:text="@={viewmodel.suPass}"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_in_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/indigo_800"
                android:fontFamily="@font/oswald_bold"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:onClick="@{(view) ->viewmodel.signUpCalling(view)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_edit_layout" />


        </LinearLayout>
    </ScrollView>
</layout>